@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-24T00:30:39Z",
-  "count_outdated" : 223,
-  "uniques_outdated" : 158,
+  "timestamp" : "2024-01-26T00:28:16Z",
+  "count_outdated" : 224,
+  "uniques_outdated" : 159,
   "count" : 229,
   "uniques" : 164,
   "clones" : [
-    {
-      "timestamp": "2024-01-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-13T00:00:00Z",
       "count": 1,
